version/0.14/_sources/api/solver/_autosummary/settings/premix_heat_of_comb.rst.txt
:orphan:

.. _premix_heat_of_comb:

premix_heat_of_comb
===================

.. autoclass:: ansys.fluent.core.solver.settings_231.premix_heat_of_comb.premix_heat_of_comb

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

